--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Bootlab">
 
 	<title>SINAPSIS V 2.0 &amp; JOTALEJO</title>
-	<link rel="icon" href="{{url_for('static', filename='/img/avatars/Ic_Sinap_sf.png')}}">
+	<link rel="icon" href="{{url_for('static', filename='img/avatars/Ic_Sinap_sf.png')}}">
 
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
 	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='/img/favicons/sinap_favicon-32x32_sf.png')}}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='img/favicons/sinap_favicon-32x32_sf.png')}}">
 	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/manifest.json">
@@ -33,7 +33,7 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<link rel="preconnect" href="//fonts.gstatic.com/" crossorigin>
-	<link rel="stylesheet" href="{{url_for('static', filename='/css/classic.css')}}">
+	<link rel="stylesheet" href="{{url_for('static', filename='css/classic.css')}}">
 </head>
 
 <body style="background-color: aliceblue;">
@@ -64,7 +64,7 @@
 				<div class="col-md-11 col-lg-9 col-xl-12 mx-auto">
 					<div class="row">
 						<div class="col-xl-6">		
-							<img src="{{url_for('static', filename='/img/avatars/logo_fdo_gris_SELECTIVA.png')}}" alt="T-Risk" class="circle" width="471" height="153"/>
+							<img src="{{url_for('static', filename='img/avatars/logo_fdo_gris_SELECTIVA.png')}}" alt="T-Risk" class="circle" width="471" height="153"/>
 
 							<h1 class="text-white font-weight-normal my-4">SINAPSIS SOFTWARE EMPRESARIAL</h1>
 
@@ -102,7 +102,7 @@
 						<div class="col-xl-6 ml-auto d-none d-xl-block">
 							<div class="landing-intro-img">
 
-								<img src="{{url_for('static', filename='/img/screenshots/Fondo1_Sinapsis2.png')}}" width="550" height="550" style="border-radius: 20px;" alt="Analytics SELECTIVA Theme" />								
+								<img src="{{url_for('static', filename='img/screenshots/Fondo1_Sinapsis2.png')}}" width="550" height="550" style="border-radius: 20px;" alt="Analytics SELECTIVA Theme" />								
 							</div>
 						</div>
 					</div>
@@ -124,7 +124,7 @@
 		</div>
 	</section>
 
-	<script src="{{url_for('static', filename='/js/app.js')}}"></script>
+	<script src="{{url_for('static', filename='js/app.js')}}"></script>
 
 </body>
 
