--- a/templates/layoutj.html
+++ b/templates/layoutj.html
@@ -9,7 +9,7 @@
 
 <title>{% block title %} :: SINAPSIS V 2.0 :: Admin {% endblock %}</title>
 
-<link rel="icon" href="{{url_for('static', filename='/img/avatars/Ic_Sinap_sf.png')}}">
+<link rel="icon" href="{{url_for('static', filename='img/avatars/Ic_Sinap_sf.png')}}">
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -21,7 +21,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
 <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='/img/favicons/sinap_favicon-32x32_sf.png')}}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='img/favicons/sinap_favicon-32x32_sf.png')}}">
 <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/manifest.json">
@@ -30,15 +30,15 @@
 <meta name="theme-color" content="#ffffff">
 
 <!-- Bootstrap Core and vandor -->
-<link rel="stylesheet" href="{{url_for('static', filename='/crush-on/assets/plugins/bootstrap/css/bootstrap.min.css')}}"/>
+<link rel="stylesheet" href="{{url_for('static', filename='crush-on/assets/plugins/bootstrap/css/bootstrap.min.css')}}"/>
 
 <!-- Plugins css -->
-<link rel="stylesheet" href="{{url_for('static', filename='/crush-on/assets/plugins/charts-c3/c3.min.css')}}"/>
-<link rel="stylesheet" href="{{url_for('static', filename='/crush-on/assets/plugins/jvectormap/jvectormap-2.0.3.css')}}"/>
+<link rel="stylesheet" href="{{url_for('static', filename='crush-on/assets/plugins/charts-c3/c3.min.css')}}"/>
+<link rel="stylesheet" href="{{url_for('static', filename='crush-on/assets/plugins/jvectormap/jvectormap-2.0.3.css')}}"/>
 
 <!-- Core css -->
-<link rel="stylesheet" href="{{url_for('static', filename='/crush-on/assets/css/main.css')}}"/>
-<link rel="stylesheet" href="{{url_for('static', filename='/crush-on/theme1/assets/css/theme1.css')}}"/>
+<link rel="stylesheet" href="{{url_for('static', filename='crush-on/assets/css/main.css')}}"/>
+<link rel="stylesheet" href="{{url_for('static', filename='crush-on/theme1/assets/css/theme1.css')}}"/>
 {% endblock %}
 </head>
 
@@ -707,14 +707,14 @@
     </div>    
 </div>
 
-<script src="{{url_for('static', filename='/crush-on/assets/bundles/lib.vendor.bundle.js')}}"></script>
+<script src="{{url_for('static', filename='crush-on/assets/bundles/lib.vendor.bundle.js')}}"></script>
 
-<script src="{{url_for('static', filename='/crush-on/assets/bundles/counterup.bundle.js')}}"></script>
-<script src="{{url_for('static', filename='/crush-on/assets/bundles/jvectormap1.bundle.js')}}"></script>
-<script src="{{url_for('static', filename='/crush-on/assets/bundles/c3.bundle.js')}}"></script>
+<script src="{{url_for('static', filename='crush-on/assets/bundles/counterup.bundle.js')}}"></script>
+<script src="{{url_for('static', filename='crush-on/assets/bundles/jvectormap1.bundle.js')}}"></script>
+<script src="{{url_for('static', filename='crush-on/assets/bundles/c3.bundle.js')}}"></script>
 
-<script src="{{url_for('static', filename='/crush-on/assets/js/core.js')}}"></script>
+<script src="{{url_for('static', filename='crush-on/assets/js/core.js')}}"></script>
 
-<script src="{{url_for('static', filename='/crush-on/theme1/assets/js/page/index.js')}}"></script>
+<script src="{{url_for('static', filename='crush-on/theme1/assets/js/page/index.js')}}"></script>
 
 </html>
