--- a/templates/dash_default_3THTA.html
+++ b/templates/dash_default_3THTA.html
@@ -1,4 +1,4 @@
-{% extends 'layoutj_3TH.html.' %}
+{% extends 'layoutj_3TH.html' %}
 {% block title %}:: SINAPSIS V 2.0 :: Inicio{% endblock %}
 {% block head %}
 {{ super() }}
