--- a/templates/form-plandes.html
+++ b/templates/form-plandes.html
@@ -1,4 +1,4 @@
-{% extends 'layoutj_3TH.html.' %}
+{% extends 'layoutj_3TH.html' %}
 {% block title %}:: SINAPSIS V 2.0 :: Direccionamiento Estratégico{% endblock %}
 {% block head %}
 <meta charset="UTF-8">
