--- a/templates/dash_default_total.html
+++ b/templates/dash_default_total.html
@@ -1,4 +1,4 @@
-{% extends 'layoutj.html' %}
+{% extends 'layoutj.html.' %}
 {% block title %}:: SINAPSIS V 2.0 :: Inicio{% endblock %}
 {% block head %}
 {{ super() }}
