--- a/templates/form-creasol.html
+++ b/templates/form-creasol.html
@@ -1,4 +1,4 @@
-{% extends 'layoutj_3TH.html' %}
+{% extends 'layoutj_3TH.html.' %}
 {% block title %}:: SINAPSIS V 2.0 :: Perspectivas{% endblock %}
 {% block head %}
 {{ super() }}
