--- a/templates/form-plandes.html
+++ b/templates/form-plandes.html
@@ -1,4 +1,4 @@
-{% extends 'layoutj_3TH.html' %}
+{% extends 'layoutj_3TH.html.' %}
 {% block title %}:: SINAPSIS V 2.0 :: Direccionamiento Estratégico{% endblock %}
 {% block head %}
 <meta charset="UTF-8">
@@ -74,8 +74,6 @@
 {% endwith %}
 
 <h1 style="margin-left: 18px;">Marco Filosófico</h1><br>
-
-<h1 style="font: bold;">Prueba pa PHP</h1><br>
 
 <!-- <form action="" method="POST"> -->
 
