--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
 <title>:: SINAPSIS V 2.0 :: Login</title>
-<link rel="icon" href="{{url_for('static', filename='img/avatars/Ic_Sinap_sf.png')}}">
+<link rel="icon" href="{{url_for('static', filename='/img/avatars/Ic_Sinap_sf.png')}}">
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -36,7 +36,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
 <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='img/favicons/sinap_favicon-32x32_sf.png')}}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='/img/favicons/sinap_favicon-32x32_sf.png')}}">
 <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/manifest.json">
@@ -45,15 +45,15 @@
 <meta name="theme-color" content="#ffffff">
 
 <link rel="preconnect" href="//fonts.gstatic.com/" crossorigin>
-<link rel="stylesheet" href="{{url_for('static', filename='css/classic.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='/css/classic.css')}}">
 
 <!-- Bootstrap Core and vandor -->
-<link rel="stylesheet" href="{{url_for('static', filename='crush-on/assets/plugins/bootstrap/css/bootstrap.min.css')}}"/>
+<link rel="stylesheet" href="{{url_for('static', filename='/crush-on/assets/plugins/bootstrap/css/bootstrap.min.css')}}"/>
 
 <!-- Core css -->
-<link rel="stylesheet" href="{{url_for('static', filename='crush-on/assets/css/main.css')}}"/>
+<link rel="stylesheet" href="{{url_for('static', filename='/crush-on/assets/css/main.css')}}"/>
 
-<link rel="stylesheet" href="{{url_for('static', filename='crush-on/assets/css/default.css')}}" />
+<link rel="stylesheet" href="{{url_for('static', filename='/crush-on/assets/css/default.css')}}" />
 <link rel="stylesheet" href="assets/css/default.css" />
 
 </head>
@@ -105,7 +105,7 @@
         <div class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="{{url_for('static', filename='img/avatars/logo_fdo_gris_SELECTIVA.png')}}" class="img-fluid" alt="login page" />
+                    <img src="{{url_for('static', filename='/img/avatars/logo_fdo_gris_SELECTIVA.png')}}" class="img-fluid" alt="login page" />
                     <div class="px-4 mt-4">
                         <h4>SINAPSIS V 2.0</h4>
                         <p>Estructura un sólido modelo para la planeación estratégica</p>
