--- a/templates/form-summernote.html
+++ b/templates/form-summernote.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="Bootlab">
 
 	<title>SINAPSIS &amp; Introducción</title>
-	<link rel="icon" href="{{url_for('static', filename='img/avatars/Ic_Sinap_sf.png')}}">
+	<link rel="icon" href="{{url_for('static', filename='/img/avatars/Ic_Sinap_sf.png')}}">
 
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -21,7 +21,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
 	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='img/favicons/sinap_favicon-32x32_sf.png')}}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='/img/favicons/sinap_favicon-32x32_sf.png')}}">
 	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/manifest.json">
@@ -30,7 +30,7 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<link rel="preconnect" href="//fonts.gstatic.com/" crossorigin>
-	<link rel="stylesheet" href="{{url_for('static', filename='css/classic.css')}}">	
+	<link rel="stylesheet" href="{{url_for('static', filename='/css/classic.css')}}">	
 
 <title>:: Introducción :: SINAPSIS V 2.0</title>
 
@@ -73,7 +73,7 @@
                                                                             
                                     <a href="https://www.selectiva.net.co/" class="btn btn-primary">Comenzar</a>
                                 </div>
-                                <embed id="elpede" src="{{url_for('static', filename='Selectiva V1.5.pdf')}}" type="application/pdf" width="100%" height="500px" />
+                                <embed id="elpede" src="{{url_for('static', filename='/Selectiva V1.5.pdf')}}" type="application/pdf" width="100%" height="500px" />
                                 <!-- /#introduction -->
 
                             </div>
